etl-destinations/tests/snapshots/deltalake_pipeline__test_cdc_deduplication_and_conflict_resolution.snap
---
source: etl-destinations/tests/deltalake_pipeline.rs
expression: users_table
---
# Schema
- id: Primitive(Long) nullable=false
- name: Primitive(String) nullable=false
- age: Primitive(Integer) nullable=false

# Data
<empty>
