etl-destinations/tests/snapshots/deltalake_pipeline__test_large_transaction_batching.snap
---
source: etl-destinations/tests/deltalake_pipeline.rs
expression: users_table
---
# Schema
- id: Primitive(Long) nullable=false
- name: Primitive(String) nullable=false
- age: Primitive(Integer) nullable=false

# Data
+----+---------------+-----+
| id | name          | age |
+----+---------------+-----+
| 1  | batch_user_1  | 21  |
| 2  | batch_user_2  | 22  |
| 3  | batch_user_3  | 23  |
| 4  | batch_user_4  | 24  |
| 5  | batch_user_5  | 25  |
| 6  | batch_user_6  | 26  |
| 7  | batch_user_7  | 27  |
| 8  | batch_user_8  | 28  |
| 9  | batch_user_9  | 29  |
| 10 | batch_user_10 | 30  |
| 11 | batch_user_11 | 31  |
| 12 | batch_user_12 | 32  |
| 13 | batch_user_13 | 33  |
| 14 | batch_user_14 | 34  |
| 15 | batch_user_15 | 35  |
| 16 | batch_user_16 | 36  |
| 17 | batch_user_17 | 37  |
| 18 | batch_user_18 | 38  |
| 19 | batch_user_19 | 39  |
| 20 | batch_user_20 | 40  |
+----+---------------+-----+
