etl-destinations/tests/snapshots/deltalake_pipeline__upsert_merge_validation.snap
---
source: etl-destinations/tests/deltalake_pipeline.rs
expression: users_table
---
# Schema
- id: Primitive(Long) nullable=false
- name: Primitive(String) nullable=false
- age: Primitive(Integer) nullable=false

# Data
+----+-----------------+-----+
| id | name            | age |
+----+-----------------+-----+
| 1  | snap_user_final | 30  |
+----+-----------------+-----+
